# science_fair_judging

./: .gitignore  LICENSE  README.md  app.py  dummy_data.csv  main.py  pyproject.toml  requirements.txt  st.py  utils.py  verify_done.py
data/: ids_judges.csv  raw_scores.csv  student_assignments.csv
dummy_data/: raw_scores.csv
templates/: admin_assign.html  admin_dashboard.html  admin_login.html  admin_results.html  admin_scores.html  base.html  judge_dashboard.html  login.html  score_form.html  signup.html
