[project]
name = "science-fair-judging"
version = "1.0.0"
description = "Science Fair Judging System"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "cachetools>=5.5.0",
    "certifi>=2025.4.0",
    "charset-normalizer>=3.4.0",
    "google-auth>=2.40.0",
    "google-auth-oauthlib>=1.2.0",
    "gspread>=6.2.0",
    "idna>=3.10",
    "numpy>=2.0.0",
    "oauthlib>=3.2.0",
    "pandas>=2.2.0",
    "pyasn1>=0.6.0",
    "pyasn1-modules>=0.4.0",
    "python-dateutil>=2.9.0",
    "python-dotenv>=1.2.0",
    "pytz>=2025.2",
    "requests>=2.32.0",
    "requests-oauthlib>=2.0.0",
    "rsa>=4.9.0",
    "six>=1.17.0",
    "tabulate>=0.9.0",
    "tqdm>=4.67.0",
    "tzdata>=2025.2",
    "urllib3>=2.4.0",
    "streamlit>=1.31.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = []
